[package]
name = "acs-database-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
indicatif = "0.17.7"
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.6"
reqwest = "0.11.20"
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
