[package]
name = "acs_database_rs"
description = "ACS Database Scraper - Builds a JSON Database of SCPs using the Anomaly Classification System"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = [".gitignore", ".editorconfig"]

version = "0.1.1"
authors = ["Woedenaz"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
cookie = "0.17.0"
futures = "0.3.28"
indicatif = "0.17.7"
log = "0.4.20"
once_cell = "1.18.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.9.6"
reqwest = { version = "0.11.20", features = ["cookies", "json"] }
scraper = "0.17.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
titlecase = "2.2.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"

[[bin]]
name = "sort_json"
path = "src/sort_json.rs"
