[package]
name = "acs_database_rs"
description = "ACS Database Scraper - Builds a JSON Database of SCPs using the Anomaly Classification System"
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = [".gitignore", ".editorconfig"]

version = "0.1.1"
authors = ["Woedenaz"]
edition = "2021"

default-run = "acs_database_rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
cookie = "0.18.1"
futures = "0.3.30"
indicatif = "0.17.8"
log = "0.4.21"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.3", features = ["cookies", "json"] }
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
titlecase = "3.0.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"

[[bin]]
name = "acs_database_rs"
path = "src/main.rs"

[[bin]]
name = "sort_json"
path = "src/sort_json.rs"
